# qttest-utils

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Changelog  README.md  code.code-workspace  package-lock.json  package.json  publish.sh  release-please-config.json  test.sh  tsconfig.json
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml  lints.yml  pre-commit.yml  release-please.yml
src/: cmake.ts  example.ts  index.ts  qttest.ts  test.ts  utils.ts
test/: test_cmake_codemodel.json
test/qt_test/: CMakeLists.txt  CMakePresets.json  test1.cpp  test2.cpp  test3.cpp
